--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "canregisters.h": "c",
         "cmsis_os.h": "c",
-        "can.h": "c"
+        "can.h": "c",
+        "cancommandtask.h": "c"
     }
 }
